# SparseTensorCompiler

./: .clang-format  .gitignore  .gitmessage  CLAUDE.md  CMakeLists.txt  QUICKSTART.md  README.md  TUTORIAL.md  autoscheduler.md  benchmarking_plan.md  input_characteristics.md  input_matrices.md  randomtext.txt
.cache/clangd/index/: ast.cpp.5D5E8D99F02FFE46.idx  ast.h.5D01CD16209CB440.idx  codegen.cpp.CD95551FFD57D7B6.idx  codegen.h.7DB608DEE5E39E34.idx  ir.cpp.36B7DF062A7B0B39.idx  ir.h.1D271E2FA80BE16A.idx  main.cpp.509A109BB5FAE664.idx  optimizations.cpp.C851414C5611C581.idx  optimizations.h.4D2CB8020782D979.idx  output_assembly_emitter.cpp.297392A1771CDD2D.idx  program_emitter.cpp.9340C1671205F7D2.idx  reference_emitter.cpp.D705C31D472C3AC0.idx  runtime_emitter.cpp.6433909AE2C43183.idx  scheduled_optimizations.cpp.842A5C588AFE20A5.idx  scheduled_optimizations.h.CA37F1E24C9C6737.idx  semantic_ir.cpp.9A88E9D980C29CCF.idx  semantic_ir.h.54C1FB73808CC190.idx  test_ast_generation.cpp.AA4342770DA66CC0.idx  test_basic_tokens.cpp.DC8CF54895B44C0A.idx  test_blocking_codegen.cpp.C0D1589352542C4A.idx  test_blocking_correctness.cpp.29DC6AFABFDA55ED.idx  test_blocking_pass.cpp.D4785788A543A148.idx  test_codegen_framework.cpp.23D4609F835C3ADB.idx  test_dense_loops.cpp.ED11FFD902E51F0D.idx  test_format_analyzer.cpp.1539DB198B3D8250.idx  test_general_codegen.cpp.D002E036FAFD62DF.idx  test_general_lowering.cpp.787D4A7BA98AE8CB.idx  test_ir_data_structures.cpp.EA34C577B6D0BB10.idx  test_ir_expr.cpp.C669162151AA4650.idx  test_ir_lowering.cpp.C18B472A241D1222.idx  test_ir_nodes.cpp.7ACC5DBF7095B77D.idx  test_ir_printer.cpp.C17F6ADCB64D5091.idx  test_ir_visitor.cpp.BC0C7FA2CB4A8923.idx  test_literals.cpp.A547F20479FE816C.idx  test_loop_interchange.cpp.C1489919A4BDCDDC.idx  test_new_kernel_detection.cpp.66E0FB98837F16E7.idx  test_new_kernel_lowering.cpp.E09FF9AD137DC43F.idx  test_new_kernel_optimizations.cpp.7AB45F01EDC71623.idx  test_opt_config.cpp.DB1B8D6542FBB539.idx  test_opt_scheduling.cpp.28B593F65F5B6E2B.idx  (+29 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml
Diss-WriteUp/: 3.0_Design-and-Implementation.md  3.1_High-Level-Architecture.md  3.2.1_Syntax-and-Examples.md  3.2.2_Semantics-and-Index-Notation.md  3.2_Domain-Specific-Language.md  3.3.1_Tensor-and-Format-Model_CSR-CSC.md  3.3.2_Semantic-IR_Operations-on-Tensors.md  3.3.3_Scheduled-IR_Loop-Tree-over-Sparse-Formats.md  3.3.4_Metrics-Exposed-by-IR.md  3.3_Sparse-IR.md  3.4.1_Transformation-Framework.md  3.4.2_Code-Blocking_Loop-Tiling.md  3.4.3_Loop-Reordering.md  3.4.4_Correctness-and-Invariants.md  3.4_Optimisations_Loop-Transformation.md  3.5.1_From-Scheduled-Loops-to-C-Loops.md  3.5.2_CSR-CSC-Specific-Access-Patterns.md  3.5.3_Benchmark-Harness-Hooks.md  3.5_Code-Generation.md  3.6_Code-Walkthrough_CSR-SpMM.md  Codegen.md  DSL.md  IR.md  Optimisations.md
Refactor-Plan/: Refactor_Codegen.md  Refactor_IR.md
artifacts/baseline/: spmm_csc_baseline.c  spmm_csc_baseline.ir.txt  spmm_csc_baseline.kernel.c.txt  spmm_csr_baseline.c  spmm_csr_baseline.ir.txt  spmm_csr_baseline.kernel.c.txt  spmv_csc_baseline.c  spmv_csc_baseline.ir.txt  spmv_csc_baseline.kernel.c.txt  spmv_csc_baseline.tc  spmv_csr_baseline.c  spmv_csr_baseline.ir.txt  spmv_csr_baseline.kernel.c.txt
artifacts/block_only/: spmm_csc_block_only.c  spmm_csc_block_only.ir.txt  spmm_csc_block_only.kernel.c.txt  spmm_csr_block_only.c  spmm_csr_block_only.ir.txt  spmm_csr_block_only.kernel.c.txt  spmv_csc_block_only.c  spmv_csc_block_only.ir.txt  spmv_csc_block_only.kernel.c.txt  spmv_csr_block_only.c  spmv_csr_block_only.ir.txt  spmv_csr_block_only.kernel.c.txt  spmv_csr_block_only.tc
artifacts/interchange/: spmm_csc_interchange.c  spmm_csc_interchange.ir.txt  spmm_csc_interchange.kernel.c.txt  spmm_csr_interchange.c  spmm_csr_interchange.ir.txt  spmm_csr_interchange.kernel.c.txt
artifacts/schedules/: spmm_csc_b_then_i.c  spmm_csc_b_then_i.ir.txt  spmm_csc_b_then_i.kernel.c.txt  spmm_csc_i_b_i.c  spmm_csc_i_b_i.ir.txt  spmm_csc_i_b_i.kernel.c.txt  spmm_csc_i_b_i.tc  spmm_csc_i_then_b.c  spmm_csr_b_then_i.c  spmm_csr_b_then_i.ir.txt  spmm_csr_b_then_i.kernel.c.txt  spmm_csr_b_then_i.tc  spmm_csr_i_b_i.c  spmm_csr_i_b_i.kernel.c.txt  spmm_csr_i_then_b.c  spmm_csr_i_then_b.ir.txt
benchmarks/: .gitignore  2D_BLOCKING_ANALYSIS.md  README.md
benchmarks/hardware_counters/: vm_setup.md
benchmarks/matrices/: README.md  download_matrices.sh
benchmarks/taco/: CMakeLists.txt  README.md  sddmm_taco.cpp  spadd_taco.cpp  spelmul_taco.cpp  spgemm_taco.cpp  spmm_taco.cpp  spmv_taco.cpp
docs/: FAIRNESS_CONTRACT.md  MILESTONE4_COMPLETE.md  OPT_SCHEDULING_IMPLEMENTATION.md  OPT_SCHEDULING_STATUS.md  TUTORIAL_UPDATE_SUMMARY.md  grammar.md  prompt.md  syntax_examples.md
examples/: general_test.tc  sddmm_csc.tc  sddmm_csr.tc  spadd_csc.tc  spadd_csr.tc  spelmul_csc.tc  spelmul_csr.tc  spgemm_csc.tc  spgemm_csr.tc  spmm_csc.tc  spmm_csr.tc  spmv.tc  spmv_bcsstk01_inverted.tc  spmv_bcsstk01_natural.tc  spmv_bodyy4_inverted.tc  spmv_bodyy4_natural.tc  spmv_cage6_inverted.tc  spmv_cage6_natural.tc  spmv_cant_inverted.tc  spmv_cant_natural.tc  spmv_consph_inverted.tc  spmv_consph_natural.tc  spmv_csc.tc  spmv_example.tc  spmv_mouse_gene_inverted.tc  spmv_mouse_gene_natural.tc  spmv_nasa2146_inverted.tc  spmv_nasa2146_natural.tc  spmv_pdb1HYS_inverted.tc  spmv_pdb1HYS_natural.tc  spmv_raefsky1_inverted.tc  spmv_raefsky1_natural.tc  spmv_venkat01_inverted.tc  spmv_venkat01_natural.tc
include/: .gitkeep  ast.h  codegen.h  ir.h  optimizations.h  scheduled_optimizations.h  semantic_ir.h  tokens.h
src/: .gitkeep  2dblockedspgemm.md  2dtiling_analysis.md  ast.cpp  codegen.cpp  ir.cpp  lexer.l  main.cpp  optimizations.cpp  parser.y  scheduled_optimizations.cpp  semantic_ir.cpp
src/codegen/: output_assembly_emitter.cpp  output_assembly_shared.cpp  output_assembly_shared.h  program_emitter.cpp  reference_emitter.cpp  runtime_emitter.cpp
tests/: .gitkeep
tests/docs/: test.md
(+110 files in other folders)
